# esp32-HMI

./: .gitignore  CMakeLists.txt  build_log.txt  partitions.csv  readme.md  sdkconfig.defaults
components/lvgl/: CMakeLists.txt  lv_conf.h
main/: CMakeLists.txt  Kconfig.projbuild  README.md  app_config.h  idf_component.yml  main.cpp
main/Audio_Driver/: PCM5101.h
main/Audio_Recorder/: AudioRecorder.c  AudioRecorder.h
main/Business_Service/: NoteService.c  NoteService.h
main/EXIO/: TCA9554PWR.h
main/File_System/: FileSystem.c
main/Http_Client/: HTTPS_USAGE.md  HttpClient.c  HttpClient.h
main/LCD_Driver/: ST77916.c  ST77916.h  esp_lcd_panel_io.h
main/LCD_Driver/esp_lcd_st77916/: esp_lcd_st77916.c  esp_lcd_st77916.h
main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.h  LVGL_Music.c
main/MIC_Driver/: MIC_Speech.h
main/PCF85063/: PCF85063.h
main/Touch_Driver/: CST816.c  CST816.h
main/Utils/: Utils.c  Utils.h
main/Wireless/: Wireless.c  Wireless.h
main/drivers/audio/: audio_processor.cc  audio_processor.h  mic_driver.c  mic_driver.h  pcm5101.c  pcm5101.h
main/drivers/display/: esp_lcd_io_i2c.h  st77916.c  st77916.h
main/drivers/gpio/: tca9554.c  tca9554.h
main/drivers/i2c/: i2c_driver.c  i2c_driver.h
main/drivers/lvgl_port/: lvgl_driver.c  lvgl_driver.h
main/drivers/power/: bat_driver.c  bat_driver.h
main/drivers/rtc/: pcf85063.c  pcf85063.h
main/drivers/storage/: file_system.c  file_system.h  sd_card.c  sd_card.h
main/drivers/touch/: cst816.c  cst816.h
main/drivers/touch/esp_lcd_touch/: esp_lcd_touch.h
main/eez_ui/: eez-flow.cpp  fonts.h  screens.c  screens.h  ui.c  ui.h
main/eez_ui/fonts/: ui_font_chinese_14.c
main/eez_ui/pages/: breathing_light.c  breathing_light.h  page_ai.c  page_ai.h  page_loading.c  page_loading.h  page_main.c  page_main.h  page_notes.c  page_notes.h
main/services/ai/: ai_service.cc  ai_service.h
main/services/http/: http_client.c  http_client.h
main/services/network/: network_monitor.c  network_monitor.h
main/services/note/: audio_recorder.c  note_service.c  note_service.h
main/services/wifi/: wifi_service.c  wifi_service.h
